# React_actix

./: README.md
backend/: .gitignore  Cargo.toml
backend/migrations/2022-10-04-054009_users/: up.sql
backend/migrations/2022-10-05-042609_users/: up.sql
backend/migrations/2022-10-07-043854_users/: up.sql
backend/migrations/2022-10-17-004043_resumes/: down.sql  up.sql
backend/src/: main.rs
backend/src/db/: connecion.rs  connection.rs  mod.rs  resume.rs  schema.rs  tech.rs  user.rs
backend/src/routes/: mod.rs  resume.rs  tech.rs  user.rs
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
