[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.7", features = ["mysql"] }
actix-cors = "0.6.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
r2d2 = "*"
dotenv = "0.15.0"
r2d2-diesel = "*"