[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.7", features = ["mysql","r2d2"] }
actix-cors = "0.6.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.126"
r2d2 = "*"
dotenv = "0.15.0"
r2d2-diesel = "*"
reqwest = { version = "0.11", features = ["json"] }
