[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.7", features = ["mysql","r2d2","chrono"] }
actix-cors = "0.6.3"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.1"
serde_derive = "1.0.145"
r2d2 = "*"
dotenv = "0.15.0"
r2d2-diesel = "*"
reqwest = { version = "0.11.12", features = ["json","stream"] }
chrono = { version = "0.4.10", features = ["serde"] }
emoji-logger = "0.1.0"
actix-identity = "0.4.0"